client/k8s/overlays/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: frontend-ingress
    annotations:
        cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
    tls:
        - hosts:
              - frontend-staging.bikramtuladhar.xyz.np
          secretName: frontend-staging-tls-secret
    rules:
        - host: data-service.verasol.webpoint.io
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: data-microservice
                            port:
                                number: 3002
    ingressClassName: nginx
